k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter-app
  template:
    metadata:
      labels:
        app: counter-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - counter-app
          topologyKey: kubernetes.io/hostname
      containers:
        - name: counter-app
          image: feralbert90/counterkc:latest
          ports:
            - containerPort: 7070
