k8s/app-external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-app-external-service
spec:
  type: LoadBalancer  # NodePort si LoadBalancer no está disponible
  selector:
    app: counter-app  # Etiqueta de los pods de la aplicación
  ports:
    - protocol: TCP
      port: 80  # Puerto que escuchará el servicio expuesto externamente
      targetPort: 7070  # Puerto en el que la aplicación está escuchando dentro de los pods
