k8s/app-internal-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-app-service
spec:
  selector:
    app: counter-app  # Etiqueta de loS pods de la aplicación
  ports:
    - protocol: TCP
      port: 7070  # Puerto en el que la aplicación está escuchando dentro de los pods
      targetPort: 7070  # Puerto en el que la aplicación está escuchando dentro de los pods
