k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Especificamos el controlador de Ingress estamos utilizando
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost  # Utilizamos localhost para pruebas locales
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: counter-app-service  # Nombre del Service que expone la aplicación
                port:
                  number: 7070  # Puerto expuesto por la aplicación
